Since jvm name includes things like client or server, 32/64 bits, lets use vm.vendor to identify the vm.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@58266 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5