@@ -467,8 +467,23 @@
             <id>SunJVM</id>
             <activation>
                 <property>
-                   <name>java.vm.name</name>
-                   <value>Java HotSpot(TM) Server VM</value>
+                   <!-- We don't use vm.name since it varies for 32bit/64 bit environments.-->
+                   <name>java.vm.vendor</name>
+                   <value>Sun Microsystems Inc.</value>
+                </property>
+            </activation>
+            <properties>
+                <argLine>-XX:MaxPermSize=256m ${extraArgs}</argLine>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>OracleJVM</id>
+            <activation>
+                <property>
+                   <!-- We don't use vm.name since it varies for 32bit/64 bit environments.-->
+                   <name>java.vm.vendor</name>
+                   <value>Oracle Corporation</value>
                 </property>
             </activation>
             <properties>
